--- a/H071211059/Pertemuan_05/app/src/main/res/layout/activity_main.xml
+++ b/H071211059/Pertemuan_05/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
     <FrameLayout
         android:id="@+id/fl_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintBottom_toTopOf="@id/ll_navbar"
         />
@@ -38,6 +38,7 @@
         >
 
         <ImageButton
+            android:id="@+id/btn_home"
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_weight="1"
@@ -46,6 +47,7 @@
             android:scaleType="fitCenter"
             />
         <ImageButton
+            android:id="@+id/btn_add_post"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
             android:layout_weight="1"
@@ -54,6 +56,7 @@
             android:scaleType="fitCenter"
             />
         <ImageButton
+            android:id="@+id/btn_profile"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
             android:layout_weight="1"
