--- a/H071211059/Pertemuan_03/quiz-app/app/src/main/res/layout/activity_main.xml
+++ b/H071211059/Pertemuan_03/quiz-app/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,8 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_camera"
                 app:contentPadding="30dp"
-                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />
+                app:shapeAppearance="cornerfu"
+                />
         </RelativeLayout>
 
         <com.google.android.material.textfield.TextInputLayout
