--- a/H071211059/Pertemuan_05/app/src/main/res/layout/item_post_layout.xml
+++ b/H071211059/Pertemuan_05/app/src/main/res/layout/item_post_layout.xml
@@ -12,6 +12,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="12dp"
@@ -53,10 +54,9 @@
     <ImageView
         android:id="@+id/iv_post_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="360dp"
         android:src="@drawable/ic_launcher_background"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         />
 
     <TextView
