--- a/H071211059/Pertemuan_08/app/src/main/res/layout/activity_form.xml
+++ b/H071211059/Pertemuan_08/app/src/main/res/layout/activity_form.xml
@@ -15,7 +15,7 @@
             android:id="@+id/et_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/title"
+            android:hint="Title"
             android:inputType="textPersonName"
             android:maxLines="1" />
 
@@ -30,7 +30,7 @@
             android:id="@+id/et_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/desc"
+            android:hint="Description"
             android:inputType="textEmailAddress"
             android:maxLines="1" />
 
@@ -40,13 +40,13 @@
         android:id="@+id/btn_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/save" />
+        android:text="Save" />
 
     <Button
         android:id="@+id/btn_delete"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/delete" />
+        android:text="Delete" />
 
 </LinearLayout>
